--- a/mcp/ai-agents/real-world-examples.mdx
+++ b/mcp/ai-agents/real-world-examples.mdx
@@ -71,13 +71,13 @@ flowchart TB
 
 If that sounds like word salad to you, we agree. We'll make the concept clear when we look at the examples below.
 
-## Example 1: Using the Claude desktop app to manage Notion tasks based on unstructured input
+## Example 1: Using Claude Desktop to manage Notion tasks based on unstructured input
 
 Here's a problem many of us struggle with: We receive requests that deserve some form of tracking, whether via email, WhatsApp, Signal, phone calls, or the biggest culprit of all - Slack. The requests or items that require action are often buried deep in threads, and occasionally, something falls through the cracks.
 
 This isn't a post about productivity or taking personal responsibility for getting things done, but this workflow has certainly helped some of us stay on top of small tasks that might otherwise have been lost in the netherworld that is Slack.
 
-Our solution is to use the Claude desktop app with a Notion MCP server to figure out which actions to keep track of and to keep track of them in Notion.
+Our solution is to use Claude Desktop with a Notion MCP server to figure out which actions to keep track of and to keep track of them in Notion.
 
 ```mermaid
 flowchart TB
@@ -299,7 +299,7 @@ If you don't have a secure messaging channel to test this yourself, try this: Wr
 
 A screenshot of a handwritten list is at the extreme end of how we've been using this method. This can also be useful when copying tasks from meeting notes, emails, and, of course, Slack threads.
 
-## Example 2: Using the Claude desktop app to create 3D graphics in Blender
+## Example 2: Using Claude Desktop to create 3D graphics in Blender
 
 This one might appeal more to the vibe coders building games. Let it be known that the author has never used Blender before, and probably never will again, but the idea of one day printing 3D objects seems cool (more so than vibe coding games), so this is exploratory.
 
@@ -355,7 +355,7 @@ You'll need:
 1. [Blender](https://www.blender.org/download/) 3.0 or newer.
 2. [Python](https://www.python.org/downloads/) 3.10 or newer.
 3. The [uv package manager](https://github.com/astral-sh/uv?tab=readme-ov-file#installation) for Python.
-4. [Claude for desktop](https://claude.ai/download) or [any other MCP client](https://modelcontextprotocol.io/clients) that supports tools.
+4. [Claude Desktop](https://claude.ai/download) or [any other MCP client](https://modelcontextprotocol.io/clients) that supports tools.
 
 ### Finding and installing a Blender MCP server
 
