--- a/mcp/building-servers/advanced-concepts/prompts.mdx
+++ b/mcp/building-servers/advanced-concepts/prompts.mdx
@@ -1,5 +1,5 @@
 ---
-title: What are MCP Prompts?
+title: What are MCP prompts?
 description: Learn how to define, expose, and use prompts in MCP servers.
 ---
 
@@ -7,9 +7,9 @@ import GramCallout from "../../.partials/gram-callout.mdx";
 
 <GramCallout />
 
-# What are MCP Prompts?
+# What are MCP prompts?
 
-MCP Prompts are reusable, structured message templates exposed by MCP servers to guide interactions with agents. Unlike tools (which execute logic) or resources (which provide read-only data), prompts return a predefined list of messages meant to initiate consistent model behavior.
+MCP prompts are reusable, structured message templates exposed by MCP servers to guide interactions with agents. Unlike tools (which execute logic) or resources (which provide read-only data), prompts return a predefined list of messages meant to initiate consistent model behavior.
 
 Prompts are declarative, composable, and designed for user-initiated workflows, such as:
 
@@ -159,7 +159,7 @@ In this example, we:
 
 ## Best practices and pitfalls to avoid
 
-Here are some best practices for implementing MCP Prompts:
+Here are some best practices for implementing MCP prompts:
 
 - Use clear, actionable names (for example, `summarize-errors`, not `get-summarized-error-log-output`).
 - Validate all required arguments up front.
@@ -167,14 +167,14 @@ Here are some best practices for implementing MCP Prompts:
 - Embed resources directly, if needed, for model context.
 - Provide concise descriptions to improve UI discoverability.
 
-When implementing MCP Prompts, avoid the following common mistakes:
+When implementing MCP prompts, avoid the following common mistakes:
 
 - Allowing missing or malformed arguments
 - Using vague or overly long prompt names
 - Passing oversized inputs (such as full files or large diffs)
 - Failing to sanitize non-UTF-8 or injection-prone strings
 
-### Prompts vs Tools vs Resources
+### Prompts vs tools vs resources
 
 The table below compares the three core primitives in MCP:
 
