--- a/mcp/building-servers/advanced-concepts/roots.mdx
+++ b/mcp/building-servers/advanced-concepts/roots.mdx
@@ -1,23 +1,23 @@
 ---
-title: What are MCP Roots?
-description: Learn about MCP Roots, how they are used, and how to implement them effectively.
+title: What are MCP roots?
+description: Learn about MCP roots, how they are used, and how to implement them effectively.
 ---
 
 import GramCallout from "../../.partials/gram-callout.mdx";
 
 <GramCallout />
 
-# What are MCP Roots?
+# What are MCP roots?
 
-MCP Roots are context-defining [URIs](https://en.wikipedia.org/wiki/Uniform_Resource_Identifier) that establish operational boundaries for MCP servers. They function as "safe zones" or "allowed directories" that an AI agent can access when interacting with your system. When an MCP client provides roots for servers, it's essentially saying, "You're allowed to work within these specific areas."
+MCP roots are context-defining [URIs](https://en.wikipedia.org/wiki/Uniform_Resource_Identifier) that establish operational boundaries for MCP servers. They function as "safe zones" or "allowed directories" that an AI agent can access when interacting with your system. When an MCP client provides roots for servers, it's essentially saying, "You're allowed to work within these specific areas."
 
 While roots are sometimes described as a **security** feature, the MCP Specification does not dictate how servers must implement root handling. So when the client tells the server which areas it can work within, the server may ignore this rule and still be within the specification.
 
 Any suggestion that roots provide security needs to assume that the server will respect the boundaries set by the client.
 
-## Why are MCP Roots useful?
+## Why are MCP roots useful?
 
-MCP Roots allow the user (or an LLM) to control **where** a server should focus or within which boundaries a server should operate.
+MCP roots allow the user (or an LLM) to control **where** a server should focus or within which boundaries a server should operate.
 
 For example, if a user has a stock-trading MCP server, they may want their client to limit the trading server to only certain stocks or exchanges.
 
@@ -32,16 +32,16 @@ Roots help in several important ways.
 - **Performance**: By limiting where a server can look, the server may run faster and with less searching or filtering logic.
 - **Trust**: Users feel more comfortable knowing servers can only access specific areas they've approved. This still depends on the server's implementation of roots.
 
-MCP Roots can point to different kinds of places:
+MCP roots can point to different kinds of places:
 
 - **Folders on your computer**: `file:///home/user/projects/myapp`
 - **Websites and APIs**: `https://api.example.com/v1`
 - **Database connections**: `db://mycompany/customers`
 - **Special locations**: `note://meeting-notes` or `config://app-settings`
 
-## How MCP Roots work
+## How MCP roots work
 
-Here's how MCP Roots could work in practice:
+Here's how MCP roots could work in practice:
 
 1. **Client to the server: _"Hello, I can use roots!"_** - The client tells the server it supports roots when they first connect.
 2. **Server to the client: _"What roots do you have?"_** - The server asks the client for available roots using `roots/list`.
@@ -72,9 +72,9 @@ Here's an example of a roots list response from a client:
 
 The `uri` indicates the precise resource location, while the optional `name` field gives the root an identifier that can be used by an LLM.
 
-## Implementing MCP Roots in Python
+## Implementing MCP roots in Python
 
-Let's look at examples of how to implement MCP Roots using [FastMCP](https://github.com/jlowin/fastmcp/):
+Let's look at examples of how to implement MCP roots using [FastMCP](https://github.com/jlowin/fastmcp/):
 
 ### Server implementation
 
@@ -156,7 +156,7 @@ In these examples:
 
 ## Implementation patterns
 
-Let's look at some examples of how we can use MCP Roots within a server.
+Let's look at some examples of how we can use MCP roots within a server.
 
 ### File system access
 
@@ -200,7 +200,7 @@ async def make_api_call(endpoint, method="GET", data=None):
 
 ### Tool integration
 
-MCP Roots also work with MCP Tools. If a tool is granted access to a root, it can only operate on files within that root:
+MCP roots also work with MCP tools. If a tool is granted access to a root, it can only operate on files within that root:
 
 ```python
 @app.tool("create_file")
@@ -244,6 +244,6 @@ async def list_resources():
     return allowed_resources
 ```
 
-### Roots vs Tools
+### Roots vs tools
 
-MCP Roots are distinct from [MCP Tools](/mcp/tools), which are callable server-side actions. While MCP Roots define where operations can occur, MCP Tools define what actions can be performed.
+MCP roots are distinct from [MCP tools](/mcp/tools), which are callable server-side actions. While MCP roots define where operations can occur, MCP tools define what actions can be performed.
