--- a/mcp/building-servers/advanced-concepts/sampling.mdx
+++ b/mcp/building-servers/advanced-concepts/sampling.mdx
@@ -1,17 +1,17 @@
 ---
-title: What is MCP Sampling?
-description: Learn how MCP Sampling enables servers to request LLM completions through clients, enabling sophisticated agentic behaviors.
+title: What is MCP sampling?
+description: Learn how MCP sampling enables servers to request LLM completions through clients, enabling sophisticated agentic behaviors.
 ---
 
 import GramCallout from "../../.partials/gram-callout.mdx";
 
 <GramCallout />
 
-# What is MCP Sampling?
+# What is MCP sampling?
 
-MCP Sampling lets servers ask for LLM completions through the client. This means your server can send a request to the LLM and receive a completion to continue solving a task.
+MCP sampling lets servers ask for LLM completions through the client. This means your server can send a request to the LLM and receive a completion to continue solving a task.
 
-MCP Sampling is unique in that it flips the typical flow: Rather than clients always initiating requests, servers can ask for AI help when needed. This enables an MCP server to:
+MCP sampling is unique in that it flips the typical flow: Rather than clients always initiating requests, servers can ask for AI help when needed. This enables an MCP server to:
 
 - Use AI to make smart decisions based on available information.
 - Create structured data outputs in specific formats.
@@ -22,7 +22,7 @@ Sampling also allows for a human to be involved in the process: The user can rev
 
 ## How sampling works
 
-Here's how MCP Sampling works:
+Here's how MCP sampling works:
 
 1. Your server sends a `sampling/createMessage` to the client while fulfilling a task.
 2. **Human checkpoint one:** The client shows the user the exact prompt and context that will be sent to the LLM and the user may edit, approve, or reject this request.
@@ -107,7 +107,7 @@ The response includes:
 
 Here's an example of using sampling with an MCP-enabled dev tool integrated with an IDE. We want the language model to help us analyze and improve a code snippet. The server sends a sampling request containing the code and a prompt asking for refactoring suggestions.
 
-### How it works:
+### How it works
 
 1. **Server request:** The MCP server sends a sampling request with a prompt asking for a code review.
 2. **LLM sampling:** The client forwards the prompt to the LLM, which returns detailed suggestions as completions.
