--- a/mcp/building-servers/optimizing-openapi.mdx
+++ b/mcp/building-servers/optimizing-openapi.mdx
@@ -217,7 +217,7 @@ This MCP tool is generated directly from the OpenAPI document, and it provides a
 
 ### Natural language becomes API calls
 
-Let's take a look at how this works in practice. Say a user asks, _"What's Lewis Hamilton's fastest lap at Silverstone?"_ using Claude desktop.
+Let's take a look at how this works in practice. Say a user asks, _"What's Lewis Hamilton's fastest lap at Silverstone?"_ using Claude Desktop.
 
 ![Claude fetching a lap time](../assets/optimizing/claude-desktop-example.png)
 
@@ -351,7 +351,7 @@ npx mcp start --scope read
 npx mcp start --scope read --scope write
 ```
 
-If you're using the Claude desktop app, you can also specify scopes in the config:
+If you're using Claude Desktop, you can also specify scopes in the config:
 
 ```json
 {
