--- a/mcp/building-servers/protocol-reference/resources.mdx
+++ b/mcp/building-servers/protocol-reference/resources.mdx
@@ -1,15 +1,15 @@
 ---
-title: What are MCP Resources?
-description: Learn how MCP Resources function as context objects in the MCP protocol and help LLMs understand the world without causing side effects.
+title: What are MCP resources?
+description: Learn how MCP resources function as context objects in the MCP protocol and help LLMs understand the world without causing side effects.
 ---
 
 import GramCallout from "../../.partials/gram-callout.mdx";
 
 <GramCallout />
 
-# What are MCP Resources?
+# What are MCP resources?
 
-MCP Resources are read-only, addressable content entities exposed by the server. They allow MCP clients to retrieve structured, contextual data (such as logs, configuration data, or external documents) that can be passed to models for reasoning. Because resources are strictly observational and not actionable, they must be deterministic, idempotent, and free of side effects.
+MCP resources are read-only, addressable content entities exposed by the server. They allow MCP clients to retrieve structured, contextual data (such as logs, configuration data, or external documents) that can be passed to models for reasoning. Because resources are strictly observational and not actionable, they must be deterministic, idempotent, and free of side effects.
 
 Resources can expose:
 
@@ -140,7 +140,7 @@ async def list_apple_earnings_resource() -> list[types.Resource]:
 
 ## Best practices and pitfalls to avoid
 
-Here are some best practices for implementing MCP Resources:
+Here are some best practices for implementing MCP resources:
 
 - Use clear, descriptive URI schemes like `note://`, `stock://`, or `config://`.
 - Keep resource data consistent and read-only.
@@ -155,7 +155,7 @@ Here are some pitfalls to avoid:
 - Exposing sensitive data (unless scoped by [roots](/mcp/roots) or authenticated context).
 - Relying on global state (unless explicitly isolated per session).
 
-MCP Resources are intended for structured, factual, and often cached information. They are perfect for background context, factual grounding, or real-world reference material.
+MCP resources are intended for structured, factual, and often cached information. They are perfect for background context, factual grounding, or real-world reference material.
 
 ## Resource annotations
 
@@ -235,10 +235,10 @@ When implementing pagination:
 
 Pagination helps manage memory usage for large resource collections and improves client responsiveness.
 
-## Resources vs Tools
+## Resources vs tools
 
-MCP Resources are **read-only** and addressable via URIs like `note://xyz` or `stock://AAPL/earnings`. They are designed to preload context into the agent's working memory or support summarization and analysis workflows.
+MCP resources are **read-only** and addressable via URIs like `note://xyz` or `stock://AAPL/earnings`. They are designed to preload context into the agent's working memory or support summarization and analysis workflows.
 
-MCP Tools are **actionable** and invoked by the client with parameters to perform an action like writing a file, placing an order, or creating a task.
+MCP tools are **actionable** and invoked by the client with parameters to perform an action like writing a file, placing an order, or creating a task.
 
 To avoid decision paralysis, define resources according to **what the client should know** and tools according to **what the client can do**.
