--- a/mcp/building-servers/protocol-reference/tools.mdx
+++ b/mcp/building-servers/protocol-reference/tools.mdx
@@ -1,5 +1,5 @@
 ---
-title: What are MCP Tools?
+title: What are MCP tools?
 description: Learn how to build MCP tools.
 ---
 
@@ -8,9 +8,9 @@ import GramCallout from "../../.partials/gram-callout.mdx";
 
 <GramCallout />
 
-# What are MCP Tools?
+# What are MCP tools?
 
-MCP Tools are callable functions that MCP servers expose to the client. They allow interactions with real-world external environments, like querying databases, calling APIs, writing files, triggering workflows, and more.
+MCP tools are callable functions that MCP servers expose to the client. They allow interactions with real-world external environments, like querying databases, calling APIs, writing files, triggering workflows, and more.
 
 Tools are how clients can perform actions and trigger side effects using MCP.
 
@@ -163,7 +163,7 @@ async def call_tool(name: str, arguments: dict) -> list[types.TextContent]:
 In this example, we:
 
 - **Register a tool called `place_stock_order`** with a clear description and a JSON Schema specifying required inputs like `symbol`, `qty`, `side`, `order_type`, and `time_in_force`.
-- **Use `@list_tools` to expose the tool metadata** to the client. This is how agents and UI tools like Claude desktop discover available tools dynamically at runtime.
+- **Use `@list_tools` to expose the tool metadata** to the client. This is how agents and UI tools like Claude Desktop discover available tools dynamically at runtime.
 - **Implement `@call_tool` to handle the execution logic.** When the tool is invoked by the client, the server builds an HTTP request to the Alpaca API using the provided arguments.
 - **Format a confirmation message summarizing the placed order.** The result is returned as a `TextContent` object, which is compatible with standard MCP tool responses.
 
@@ -243,4 +243,4 @@ Avoid these common pitfalls:
 - Global state unless scoped per session.
 - Returning raw strings unless free-form output is the intent.
 
-MCP Tools are often confused with [MCP Resources](/mcp/resources), which are named, read-only data references addressable via URIs. Learn more about the difference in the Resources vs Tools section of the [MCP Resources documentation](/mcp/resources#resources-vs-tools).
+MCP tools are often confused with [MCP resources](/mcp/resources), which are named, read-only data references addressable via URIs. Learn more about the difference in the Resources vs Tools section of the [MCP resources documentation](/mcp/resources#resources-vs-tools).
