--- a/mcp/building-servers/protocol-reference/transports.mdx
+++ b/mcp/building-servers/protocol-reference/transports.mdx
@@ -1,5 +1,5 @@
 ---
-title: What are MCP Transports?
+title: What are MCP transports?
 description: Learn how to expose your MCP server.
 ---
 
@@ -7,11 +7,11 @@ import GramCallout from "../../.partials/gram-callout.mdx";
 
 <GramCallout />
 
-# What are MCP Transports?
+# What are MCP transports?
 
 So, you've built your first MCP server – you've defined some tools, exposed a few resources, and maybe even wired up prompts – but how do you actually connect to it? That's where transports come in.
 
-MCP Transports define how messages move between clients and servers. While MCP is a model-agnostic, JSON-RPC-based protocol, the transport layer handles the real-world details of sending and receiving data – whether you're embedding the server in a local CLI, streaming updates to a browser, or wiring it into a desktop agent.
+MCP transports define how messages move between clients and servers. While MCP is a model-agnostic, JSON-RPC-based protocol, the transport layer handles the real-world details of sending and receiving data – whether you're embedding the server in a local CLI, streaming updates to a browser, or wiring it into a desktop agent.
 
 MCP currently supports two standard forms of transport: `stdio` and `SSE`. Custom transports that conform to the standard input and output (stdio) and message-handling semantics are also supported.
 
@@ -56,7 +56,7 @@ A notification is a one-way message that does not expect a response.
 }
 ```
 
-## Built-in MCP Transports
+## Built-in MCP transports
 
 MCP servers can be exposed over two built-in transport mechanisms:
 
@@ -68,7 +68,7 @@ Other use cases are:
 
 - CLI tools
 - Local development
-- Agent plugins (like the Claude desktop app or LangGraph steps)
+- Agent plugins (like Claude Desktop or LangGraph steps)
 
 Here is a Python implementation of an MCP transport with `stdio`:
 
@@ -198,7 +198,7 @@ An MCP server can support multiple transport mechanisms simultaneously, but it m
 | ----------------------------------------- | --------------------- |
 | Local development                         | `stdio`               |
 | CLI tools                                 | `stdio`               |
-| Agent plugins (LangGraph, Claude desktop) | `stdio`               |
+| Agent plugins (LangGraph, Claude Desktop) | `stdio`               |
 | Server UIs / browsers                     | `SSE`                 |
 | Cross-network communication               | `SSE` with CORS/Auth  |
 | Custom hardware or IPC                    | Custom                |
