--- a/mcp/getting-started/intro.mdx
+++ b/mcp/getting-started/intro.mdx
@@ -118,7 +118,7 @@ The answer is that neither the LLM nor the agent talks directly to the MCP serve
 
 The MCP client acts as the middle layer between the server and the model. It may be embedded in:
 
-- A desktop application (such as the Claude desktop app)
+- A desktop application (such as Claude Desktop)
 - An agent runtime
 - A custom LLM client
 
@@ -136,8 +136,8 @@ For example, in an agentic architecture, the flow looks like this:
 
 Unlike many client-server protocols where clients only make requests and servers only respond, MCP supports full bidirectional communication.
 
-- **Client-to-Server**: The client can request resources, call tools, and get prompts.
-- **Server-to-Client**: The server can request LLM sampling, ask for root listings, and send notifications.
+- **Client-to-server**: The client can request resources, call tools, and get prompts.
+- **Server-to-client**: The server can request LLM sampling, ask for root listings, and send notifications.
 - **Notifications**: Both sides can send one-way messages without expecting responses.
 
 This bidirectional design enables workflows in which servers can actively participate in decision-making by requesting LLM assistance through the client.
