--- a/mcp/index.mdx
+++ b/mcp/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: MCP Hub
-description: Learn how Model Context Protocol (MCP) lets your agents or clients connect to real-world tools and data through a universal protocol.
+description: Learn how MCP lets your agents or clients connect to real-world tools and data through a universal protocol.
 ---
 
 import { CardGrid } from "@/components/card-grid";
@@ -16,27 +16,27 @@ import GramCallout from "./.partials/gram-callout.mdx";
 
 # Model Context Protocol (MCP) Hub
 
-Welcome to the Model Context Protocol hub. This collection of resources helps you understand and implement MCP to connect your AI agents to real-world tools and data.
+Welcome to the Model Context Protocol Hub. This collection of resources helps you understand and implement MCP to connect your AI agents to real-world tools and data.
 
-## Getting Started with MCP
+## Getting started with MCP
 
 New to MCP? Start here to understand what it is and how to use it.
 
 <CardGrid cards={mcpGettingStartedCards} columns={2} />
 
-## Using MCP Servers
+## Using MCP servers
 
 Learn how to connect and work with existing MCP servers in your applications.
 
 <CardGrid cards={mcpUsingCards} columns={2} />
 
-## Building MCP Servers
+## Building MCP servers
 
 Ready to build your own MCP servers? These resources cover the technical implementation details.
 
 <CardGrid cards={mcpBuildingServersCards} columns={2} />
 
-## Building AI Agents
+## Building AI agents
 
 Discover how to create intelligent agents that leverage MCP for real-world capabilities.
 
