--- a/mcp/using-mcp/remote-servers.mdx
+++ b/mcp/using-mcp/remote-servers.mdx
@@ -85,13 +85,13 @@ Let's summarize the steps here by modifying the [Sentry MCP](https://github.com/
 
 ### Requirements
 
-You'll need a [Cloudflare](https://www.cloudflare.com/) account (free is fine), and [Node.js](https://nodejs.org/en/download) with [pnpm](https://pnpm.io/installation) installed locally. Our example uses the Sentry MCP server, so you'll also need a Sentry account.
+You'll need a [Cloudflare](https://www.cloudflare.com/) account (free is fine), and [Node.js](https://nodejs.org/en/download) with [pnpm](https://pnpm.io/installation) installed locally. Our example uses the Sentry MCP Server, so you'll also need a Sentry account.
 
 ### Starting with a template
 
-If you're building your own server, you can start with one of the many [Cloudflare demos](https://github.com/cloudflare/ai/tree/main/demos). But to get something useful up and running in this guide, we decided to use the [Sentry MCP server](https://github.com/getsentry/sentry-mcp) (itself based on the [mcp-github-oauth](https://github.com/cloudflare/ai/tree/main/demos/remote-mcp-github-oauth) demo) as an example.
+If you're building your own server, you can start with one of the many [Cloudflare demos](https://github.com/cloudflare/ai/tree/main/demos). But to get something useful up and running in this guide, we decided to use the [Sentry MCP Server](https://github.com/getsentry/sentry-mcp) (itself based on the [mcp-github-oauth](https://github.com/cloudflare/ai/tree/main/demos/remote-mcp-github-oauth) demo) as an example.
 
-Clone the Sentry MCP server:
+Clone the Sentry MCP Server:
 
 ```bash
 git clone https://github.com/getsentry/sentry-mcp
@@ -128,7 +128,7 @@ This opens a browser window and asks you to log in to your Cloudflare account. O
 
 ### Creating a Cloudflare KV namespace
 
-The Sentry MCP server uses a Cloudflare KV namespace to store OAuth tokens. You can create a new KV namespace using the Wrangler CLI:
+The Sentry MCP Server uses a Cloudflare KV namespace to store OAuth tokens. You can create a new KV namespace using the Wrangler CLI:
 
 ```bash
 npx wrangler kv namespace create "OAUTH_KV"
@@ -215,7 +215,7 @@ Take note of the **Client ID** and **Client Secret**. You'll need these in the n
 
 ### Configuring the environment variables
 
-The Sentry MCP server uses environment variables to configure the OAuth flow. You can set these using Cloudflare Wrangler:
+The Sentry MCP Server uses environment variables to configure the OAuth flow. You can set these using Cloudflare Wrangler:
 
 Change the working directory to `packages/mcp-cloudflare`, where the `wrangler.jsonc` file is located:
 
@@ -288,7 +288,7 @@ This starts the MCP Inspector, which allows you to interact with the MCP server 
 
 ### Setting the redirect URL in Sentry
 
-Before you can connect the MCP Inspector to the Sentry MCP server, you need to set the redirect URL in Sentry. This is the URL that Sentry redirects to after the OAuth flow is complete.
+Before you can connect the MCP Inspector to the Sentry MCP Server, you need to set the redirect URL in Sentry. This is the URL that Sentry redirects to after the OAuth flow is complete.
 
 1. In a new browser tab, go back to the Sentry API application you created earlier.
 2. Click on the application name to open the details.
@@ -300,9 +300,9 @@ Before you can connect the MCP Inspector to the Sentry MCP server, you need to s
 
 There is no save button. Unfocus the field, and Sentry should display a toast message indicating that the redirect URL was updated successfully. You can close this tab.
 
-### Connecting the MCP Inspector to the Sentry MCP server
+### Connecting the MCP Inspector to the Sentry MCP Server
 
-Now that you have the redirect URL set up, you can connect the MCP Inspector to the Sentry MCP server.
+Now that you have the redirect URL set up, you can connect the MCP Inspector to the Sentry MCP Server.
 
 In the inspector window:
 
@@ -314,14 +314,14 @@ This establishes a connection to the MCP server, which kicks off the OAuth flow.
 
 ![The Sentry MCP OAuth authorization dialog is open in a browser window. It displays the Sentry MCP logo and title at the top, followed by a box stating MCP Inspector is requesting access. Inside the box, details are shown: Name MCP Inspector, Website https://github.com/modelcontextprotocol/inspector, Redirect URIs http://127.0.0.1:6274/oauth/callback. Below, a message explains that the MCP Client is requesting authorization to Sentry MCP and that approval will redirect to complete authentication. Two buttons are at the bottom: Cancel and Approve, with Approve highlighted in light purple.](../assets/remote-servers/mcp-sentry-auth.png)
 
-If you look at the URL in the address bar, you'll notice that the redirect URL is set to your local MCP Inspector URL. This is expected, as the MCP Inspector is running locally and will handle the OAuth client flow. Also of note is that the OAuth page you're looking at is hosted on the Sentry MCP server, not on Sentry itself.
+If you look at the URL in the address bar, you'll notice that the redirect URL is set to your local MCP Inspector URL. This is expected, as the MCP Inspector is running locally and will handle the OAuth client flow. Also of note is that the OAuth page you're looking at is hosted on the Sentry MCP Server, not on Sentry itself.
 
-This is because the Sentry MCP server is acting as a proxy for the OAuth flow. The MCP Inspector is requesting authorization to access your Sentry account, and the Sentry MCP server is handling the redirect. The MCP Specification recommends this approach, as it allows the MCP server to act as a trusted intermediary between the client and the OAuth provider.
+This is because the Sentry MCP Server is acting as a proxy for the OAuth flow. The MCP Inspector is requesting authorization to access your Sentry account, and the Sentry MCP Server is handling the redirect. The MCP Specification recommends this approach, as it allows the MCP server to act as a trusted intermediary between the client and the OAuth provider.
 
 There are, in effect, _two_ OAuth flows happening here:
 
-1. The MCP Inspector is requesting authorization to access your Sentry MCP server.
-2. The Sentry MCP server is requesting authorization to access your Sentry account on behalf of the MCP Inspector.
+1. The MCP Inspector is requesting authorization to access your Sentry MCP Server.
+2. The Sentry MCP Server is requesting authorization to access your Sentry account on behalf of the MCP Inspector.
 
 Click **Approve**. The MCP Inspector will then redirect to the Sentry OAuth page for your app.
 
@@ -343,7 +343,7 @@ Now click the **Run Tool** button to execute the tool. This will send a request 
 
 The response shows a list of organizations that you have access to in Sentry. This confirms that the MCP server can access your Sentry account and that the OAuth flow is working correctly.
 
-Now everyone on your team can use the Sentry MCP server with their IDEs, LLMs, or any other MCP client. Of course, if you don't need to change the server code, you could just as well use the [hosted Sentry MCP server](https://mcp.sentry.dev/).
+Now everyone on your team can use the Sentry MCP Server with their IDEs, LLMs, or any other MCP client. Of course, if you don't need to change the server code, you could just as well use the [hosted Sentry MCP Server](https://mcp.sentry.dev/).
 
 ## On-premises deployment with Cloudflare tunnels
 
